--- a/ucap.cabal
+++ b/ucap.cabal
@@ -13,6 +13,7 @@ library
                     , Data.UCap.Classes
                     , Data.UCap.Const
                     , Data.UCap.Counter
+                    , Data.UCap.Eff
                     , Data.UCap.InfSet
     build-depends:    base ^>=4.14.3.0, containers, aeson
     hs-source-dirs:   src
