--- a/ucap.cabal
+++ b/ucap.cabal
@@ -16,6 +16,7 @@ library
                     , Data.UCap.Eff
                     , Data.UCap.Either
                     , Data.UCap.Identity
+                    , Data.UCap.InfMap
                     , Data.UCap.InfSet
                     , Data.UCap.Map
     build-depends:    base ^>=4.14.3.0, containers, aeson
