--- a/ucap.cabal
+++ b/ucap.cabal
@@ -23,9 +23,15 @@ library
     hs-source-dirs:   src
     default-language: Haskell2010
 
-test-suite ucap-haskell-test
+test-suite test
     default-language: Haskell2010
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
-    main-is:          MyLibTest.hs
+    main-is:          test.hs
+    other-modules:    Data.UCap.InfMapTests
     build-depends:    base ^>=4.14.3.0
+                    , containers
+                    , tasty
+                    , tasty-hunit
+                    , tasty-quickcheck
+                    , ucap
