--- a/ucap.cabal
+++ b/ucap.cabal
@@ -13,15 +13,14 @@ library
                     , Data.UCap.Classes
                     , Data.UCap.Const
                     , Data.UCap.Counter
-                    , Data.UCap.Eff
                     , Data.UCap.Either
                     , Data.UCap.Identity
                     , Data.UCap.InfMap
                     , Data.UCap.InfSet
                     , Data.UCap.Map
                     , Data.UCap.Op
-                    , Data.UCap.UCT
-                    , Data.UCap.UCT.Queue
+                    -- , Data.UCap.UCT
+                    -- , Data.UCap.UCT.Queue
     build-depends:    base ^>=4.14.3.0, containers, aeson, mtl
     hs-source-dirs:   src
     default-language: Haskell2010
@@ -31,7 +30,8 @@ test-suite test
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
     main-is:          test.hs
-    other-modules:    Data.UCap.InfMapTests
+    other-modules:    Data.UCapTests
+                    , Data.UCap.InfMapTests
                     , Data.UCap.MapTests
     build-depends:    base ^>=4.14.3.0
                     , containers
