--- a/ucap.cabal
+++ b/ucap.cabal
@@ -10,17 +10,15 @@ maintainer:         nicklewchenko92@gmail.com
 library
     exposed-modules:  Data.UCap
                     , Data.UCap.Bound
-                    , Data.UCap.Classes
+                    , Data.UCap.InfMap
+                    , Data.UCap.InfSet
+                    , Data.UCap.Op
+    other-modules:    Data.UCap.Classes
                     , Data.UCap.Const
                     , Data.UCap.Counter
                     , Data.UCap.Either
                     , Data.UCap.Identity
-                    , Data.UCap.InfMap
-                    , Data.UCap.InfSet
                     , Data.UCap.Map
-                    , Data.UCap.Op
-                    -- , Data.UCap.UCT
-                    -- , Data.UCap.UCT.Queue
     build-depends:    base ^>=4.14.3.0, containers, aeson, mtl
     hs-source-dirs:   src
     default-language: Haskell2010
