--- a/ucap.cabal
+++ b/ucap.cabal
@@ -19,7 +19,13 @@ library
                     , Data.UCap.Either
                     , Data.UCap.Identity
                     , Data.UCap.Map
-    build-depends:    base ^>=4.14.3.0, containers, aeson, mtl
+                    , Data.UCap.Op.Internal
+                    , Data.UCap.Op.Counter
+    build-depends:    base ^>=4.14.3.0
+                    , containers
+                    , aeson
+                    , microlens-ghc
+                    , mtl
     hs-source-dirs:   src
     default-language: Haskell2010
 
