--- a/ucap.cabal
+++ b/ucap.cabal
@@ -42,6 +42,7 @@ test-suite test
     other-modules:    Data.UCapTests
                     , Data.UCap.InfMapTests
                     , Data.UCap.MapTests
+                    , Data.UCap.OpTests
     build-depends:    base ^>=4.14.3.0
                     , containers
                     , mtl
