--- a/ucap.cabal
+++ b/ucap.cabal
@@ -17,6 +17,7 @@ library
                     , UCap.Lifter
                     , UCap.Op
                     , UCap.Replica
+                    , UCap.Replica.Capconf
                     , UCap.Replica.Demo
                     , UCap.Replica.Types
                     , UCap.Replica.VClock
