--- a/ucap.cabal
+++ b/ucap.cabal
@@ -49,6 +49,7 @@ test-suite test
                     , UCapTests
                     , UCap.MapTests
                     , UCap.OpTests
+                    , UCap.Replica.DemoTests
                     , UCap.Replica.VClockTests
                     , UCap.Replica.VThreadTests
     build-depends:    base ^>=4.14.3.0
