--- a/ucap.cabal
+++ b/ucap.cabal
@@ -38,6 +38,7 @@ library
                     , aeson
                     , microlens-platform
                     , mtl
+                    , free
     hs-source-dirs:   src
     default-language: Haskell2010
 
