--- a/ucap.cabal
+++ b/ucap.cabal
@@ -45,6 +45,7 @@ library
                     , microlens-platform
                     , mtl
                     , free
+                    , bifunctors
     hs-source-dirs:   src
     default-language: Haskell2010
 
