--- a/ucap.cabal
+++ b/ucap.cabal
@@ -62,6 +62,7 @@ test-suite test
     hs-source-dirs:   test
     main-is:          test.hs
     other-modules:    Data.InfMapTests
+                    , Data.SRQueueTests
                     , UCapTests
                     , UCap.MapTests
                     , UCap.OpTests
