--- a/ucap.cabal
+++ b/ucap.cabal
@@ -24,6 +24,7 @@ library
                     , UCap.Op
                     , UCap.Replica
                     , UCap.Replica.Demo
+                    , UCap.Replica.Http
                     , UCap.Replica.PDemo
                     , UCap.Replica.Script
                     , UCap.Replica.Transact
@@ -53,6 +54,12 @@ library
                     , mtl
                     , free
                     , bifunctors
+                    , http-client
+                    , http-types
+                    , wai
+                    , warp
+                    , stm
+                    , time
     hs-source-dirs:   src
     default-language: Haskell2010
 
