--- a/ucap.cabal
+++ b/ucap.cabal
@@ -25,6 +25,7 @@ library
                     , UCap.Replica
                     , UCap.Replica.Demo
                     , UCap.Replica.Http
+                    , UCap.Replica.HttpDemo
                     , UCap.Replica.MRep
                     , UCap.Replica.PDemo
                     , UCap.Replica.Script
@@ -61,6 +62,7 @@ library
                     , warp
                     , stm
                     , time
+                    , bytestring
     hs-source-dirs:   src
     default-language: Haskell2010
 
