Use StateT for transactQueue
I've added tests to make sure that StateT works sensibly over
Rwa/Block, and got rid of the need for specific Block type aliases for
each script type, such as EScriptB.

--- a/ucap.cabal
+++ b/ucap.cabal
@@ -74,6 +74,7 @@ test-suite test
     main-is:          test.hs
     other-modules:    Data.InfMapTests
                     , Data.SRQueueTests
+                    , Lang.RwaTests
                     , UCapTests
                     , UCap.MapTests
                     , UCap.OpTests
