--- a/ucap.cabal
+++ b/ucap.cabal
@@ -90,3 +90,17 @@ test-suite test
                     , tasty-hunit
                     , tasty-quickcheck
                     , ucap
+
+executable ucap-demo
+    default-language: Haskell2010
+    hs-source-dirs:   demo
+    main-is:          Main.hs
+    other-modules:    UCap.Demo.Config
+    build-depends:    base ^>=4.14.3.0
+                    , ucap
+                    , dhall
+                    , mtl
+                    , containers
+                    , stm
+                    , text
+                    , time
