--- a/ucap.cabal
+++ b/ucap.cabal
@@ -17,7 +17,7 @@ library
                     , UCap
                     , UCap.Coord
                     , UCap.Coord.Int
-                    , UCap.Coord.Map
+                    , UCap.Coord.StaticMap
                     , UCap.Domain
                     , UCap.Domain.Int
                     , UCap.Domain.StaticMap
