--- a/ucap.cabal
+++ b/ucap.cabal
@@ -66,26 +66,26 @@ library
     hs-source-dirs:   src
     default-language: Haskell2010
 
--- test-suite test
---     default-language: Haskell2010
---     type:             exitcode-stdio-1.0
---     hs-source-dirs:   test
---     main-is:          test.hs
---     other-modules:    Data.InfMapTests
---                     , Data.SRQueueTests
---                     , Lang.RwaTests
---                     , UCapTests
---                     , UCap.MapTests
---                     , UCap.OpTests
---                     , UCap.Replica.CoordTests
---                     , UCap.Replica.DemoTests
---                     , UCap.Replica.PDemoTests
---                     , UCap.Replica.VClockTests
---                     , UCap.Replica.VThreadTests
---     build-depends:    base ^>=4.14.3.0
---                     , containers
---                     , mtl
---                     , tasty
---                     , tasty-hunit
---                     , tasty-quickcheck
---                     , ucap
+test-suite test
+    default-language: Haskell2010
+    type:             exitcode-stdio-1.0
+    hs-source-dirs:   test
+    main-is:          test.hs
+    other-modules:    Data.InfMapTests
+                    , Data.SRQueueTests
+                    , Lang.RwaTests
+                    , UCapTests
+                    , UCap.MapTests
+                    , UCap.OpTests
+                    , UCap.Replica.CoordTests
+                    -- , UCap.Replica.DemoTests
+                    -- , UCap.Replica.PDemoTests
+                    , UCap.Replica.VClockTests
+                    , UCap.Replica.VThreadTests
+    build-depends:    base ^>=4.14.3.0
+                    , containers
+                    , mtl
+                    , tasty
+                    , tasty-hunit
+                    , tasty-quickcheck
+                    , ucap
